Add template for Excel upload
---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/Issadeen/zaki?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/addrp.html
+++ b/addrp.html
@@ -294,6 +294,8 @@
 
                 <input type="file" id="excelFile" name="excelFile" accept=".xlsx, .xls" class="mt-1 block w-full bg-custom-dark-secondary text-white border border-gray-600 rounded-md shadow-sm focus:ring-custom-accent focus:border-custom-accent">
 
+                <p class="text-sm text-gray-400 mt-2">Download the <a href="template.xlsx" class="text-custom-accent hover:text-custom-accent-hover">template.xlsx</a> file and use it to structure your data before uploading.</p>
+
             </div>
 
         </div>
